# CC-tradeoff

./: README  README.md
R/: README
R/isolates/: butaite.tsv  isolate_data.rmd
R/kick-flow/: lifetime_sweep.rmd
R/niche_shadow_sim/: 2d-sweep.rmd  invertase.rmd  lactamase.rmd  mu-sweep.rmd  sigma-sweep.rmd  smallmut.rmd  upsilon-sweep.rmd  utils.R
mathematica/: 2-metapopulation-model.nb  README  SI-invertase-model.nb  SI-lactamase-model.nb
rust/: Cargo.toml  README  params_lactamase.json  params_siderophore.json  params_yeast.json
rust-ode/: Cargo.toml  README  params.json
rust-ode/src/: main.rs  no-ode.rs  solve.rs
rust/src/: invertase.rs  lactamase.rs  lib.rs  siderophore.rs
