[package]
name = "dynamic"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "no-ode"
path = "src/no-ode.rs"

[lib]
name = "solve"
path = "src/solve.rs"

[dependencies]
nalgebra = { version = "0.33.2", features = ["rayon"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
rand = "0.9.1"
rand_chacha = "0.9.0"
rand_distr = "0.5.1"
zzz = "0.3.1"
differential-equations = "0.1.8"
rayon = "1.10.0"
chrono = "0.4.41"
csv = "1.3.1"


[profile.release]
debug = false
