[package]
name = "metapop"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "lactamase"
path = "src/lactamase.rs"

[[bin]]
name = "invertase"
path = "src/invertase.rs"

[[bin]]
name = "siderophore"
path = "src/siderophore.rs"

[lib]
name = "lib"
path = "src/lib.rs"

[dependencies]
chrono = "0.4.38"
clap = "4.5.17"
csv = "1.3.1"
hashbrown = "0.14.5"
itertools = "0.13.0"
nohash = "0.2.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_distr = "0.4.3"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.127"
slab = "0.4.9"
zzz = "0.3.1"
